add single step test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ ark-bls12-381 = { git = "https://github.com/arkworks-rs/algebra.git", version = 
 ark-ec = { version = "0.4.0", default-features = false }
 ark-std = "0.4.0"
 ark-serialize = { version = "0.4.0", features = ["derive"] }
+num-bigint = "0.4.4"
 
 [patch.crates-io]
 ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives", rev = "d27a5c8" }
