--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,10 @@ ark-ec = { version = "0.4.0", default-features = false }
 ark-std = "0.4.0"
 ark-serialize = { version = "0.4.0", features = ["derive"] }
 num-bigint = "0.4.4"
+serde = {version="1.0.197", features=["derive"]}
+serde_json = "1.0.115"
+hex = {version="0.4.3", features=["serde"]}
+thiserror = "1.0.58"
 
 [patch.crates-io]
 ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives", rev = "d27a5c8" }
