--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nexus-nova= { git = "https://github.com/hamidra/nexus-zkvm.git", default-features=false, features=["spartan"], version = "0.1.0" }
-ark-spartan = { git = "https://github.com/hamidra/nexus-zkvm.git", optional = true }
+nexus-nova = { git = "https://github.com/hamidra/nexus-zkvm.git", default-features=false, features=["spartan"], version = "0.1.0" }
+ark-spartan = { git = "https://github.com/hamidra/nexus-zkvm.git", package="ark-spartan" }
 
 ark-crypto-primitives = "0.4.0"
 ark-ff= "0.4.2"
